Fixed text spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3881,7 +3881,7 @@ body.is-preload #header.alt .logo {
 .card:hover {
   background-color: rgb(20, 22, 22);
   transform: translateY(-5px);
-  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.6);
 }
 
 .listrow {
@@ -3932,7 +3932,7 @@ body.is-preload #header.alt .logo {
 
 .skills-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   margin: 0;
   padding: 0;
   gap: 1em;
@@ -3942,8 +3942,7 @@ body.is-preload #header.alt .logo {
 }
 
 .skill {
-  font-size: larger;
-  border: #dddddd solid 1px;
+  font-size: 28px;
   padding: 0.75em;
   cursor: pointer;
   white-space: nowrap;
@@ -3952,11 +3951,6 @@ body.is-preload #header.alt .logo {
   justify-content: center;
   align-items: center;
   gap: 0.5em;
-}
-
-.skill:hover {
-  font-weight: bold;
-  box-shadow: #000000 0px 0px 20px;
 }
 
 .skill.na {
